clipping table's content - fix

--- a/src/components/OasisBuyOrders.scss
+++ b/src/components/OasisBuyOrders.scss
@@ -13,7 +13,7 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 170px;
+    flex-basis: 148px;
     text-align: right;
   }
 
@@ -23,13 +23,13 @@
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 110px;
+    flex-basis: 88px;
     text-align: right;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 110px;
+    flex-basis: 88px;
     text-align: right;
   }
 
