--- a/src/components/OasisMarketHistory.scss
+++ b/src/components/OasisMarketHistory.scss
@@ -12,7 +12,7 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
@@ -23,25 +23,25 @@
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 70px;
+    flex-basis: 48px;
     text-align: right;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
   th:nth-child(4),
   td:nth-child(4) {
-    flex-basis: 77px;
+    flex-basis: 55px;
     text-align: right;
   }
 
   th:nth-child(5),
   td:nth-child(5) {
-    flex-basis: 77px;
+    flex-basis: 55px;
     text-align: right;
   }
 
