--- a/src/components/OasisMarketWidget.scss
+++ b/src/components/OasisMarketWidget.scss
@@ -2,19 +2,19 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 160px;
+    flex-basis: 148px;
     text-align: center;
   }
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 145px;
+    flex-basis: 123px;
     text-align: right;
   }
 
