--- a/src/components/OasisMyOrders.scss
+++ b/src/components/OasisMyOrders.scss
@@ -23,32 +23,32 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 80px;
+    flex-basis: 58px;
     text-align: right;
   }
 
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 100px;
+    flex-basis: 68px;
     text-align: right;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 80px;
+    flex-basis: 60px;
     text-align: right;
   }
 
   th:nth-child(4),
   td:nth-child(4) {
-    flex-basis: 80px;
+    flex-basis: 60px;
     text-align: right;
   }
 
   th:nth-child(5),
   td:nth-child(5) {
-    flex-basis: 70px;
+    flex-basis: 68px;
     text-align: right;
   }
 }
