--- a/src/components/OasisWrapUnwrapBalances.scss
+++ b/src/components/OasisWrapUnwrapBalances.scss
@@ -4,19 +4,19 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 150px;
+    flex-basis: 128px;
     text-align: right;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 150px;
+    flex-basis: 128px;
     text-align: right;
   }
 
