--- a/src/components/OasisWrapUnwrapHistory.scss
+++ b/src/components/OasisWrapUnwrapHistory.scss
@@ -5,7 +5,7 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
@@ -15,19 +15,19 @@
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
   th:nth-child(4),
   td:nth-child(4) {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
