--- a/src/containers/OasisTokenTransferHistory.scss
+++ b/src/containers/OasisTokenTransferHistory.scss
@@ -17,7 +17,7 @@
 
   th:first-child,
   td:first-child {
-    flex-basis: 100px;
+    flex-basis: 78px;
     text-align: right;
   }
 
@@ -27,7 +27,7 @@
 
   th:nth-child(2),
   td:nth-child(2) {
-    flex-basis: 50px;
+    flex-basis: 28px;
     padding-left: 0;
     padding-right: 0;
     text-align: center;
@@ -36,20 +36,20 @@
 
   th:nth-child(3),
   td:nth-child(3) {
-    flex-basis: 110px;
+    flex-basis: 88px;
     flex-grow: 0;
     text-align: left;
   }
 
   th:nth-child(4),
   td:nth-child(4) {
-    flex-basis: 70px;
+    flex-basis: 48px;
     text-align: center;
   }
 
   th:nth-child(5),
   td:nth-child(5) {
-    flex-basis: 80px;
+    flex-basis: 58px;
     text-align: right;
   }
 
